<resources>
    <string name="app_name">Proyecto_as</string>
    <string name="login_usuario">LOGIN USUARIO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="logo_instituto">logo instituto</string>
    <string name="login_ok">Login correcto</string>
    <string name="unknown_user">Usuario desconocido</string>
    <string name="unregistered_user">Usuario no registrado</string>
    <string name="unknown_error">Error desconocido</string>
    <string name="unknown_connection_failure">Fallo desconocido en la conexión</string>
    <string name="empresa_alumno">Empresa</string>
    <string name="horas_completadas">Horas completadas</string>
    <string name="descripcion">Descripción</string>
    <string name="observaciones">Observaciones</string>
    <string name="alumno">Alumno</string>
    <string name="profesor">Profesor</string>
    <string name="tutor">Tutor</string>
    <string name="firmas">VALIDADO</string>
    <string name="no_hay_fichas_disponibles">No hay fichas disponibles</string>
    <string name="logout">Logout</string>
    <string name="fichas_presentadas">Fichas Presentadas</string>
    <string name="horas">Horas</string>
    <string name="firmado">Validado</string>
    <string name="_27_06_1979">27/06/1979</string>
    <string name="fecha">Fecha</string>
    <string name="no_hay_alumnos_asignados">No hay alumnos asignados</string>
    <string name="el_alumno_aun_no_tiene_fichas">El alumno aun no tiene fichas</string>
    <string name="error_al_cargar_el_usuario">Error al cargar el usuario</string>
    <string name="reintentar">Reintentar</string>
    <string name="calendario">Calendario</string>
    <string name="firma_alumno">Valida Alumno</string>
    <string name="guardar_ficha">Guardar Ficha</string>
    <string name="semana">Semana</string>
    <string name="seleccione_fecha">Seleccione fecha</string>
    <string name="enableUser">Usuario de baja</string>
    <string name="Enabled_user">El usuario esta dado de baja</string>
    <string name="ok">OK</string>
    <string name="firmar">Firmar Ficha</string>
    <string name="icono_informacion">icono informacion</string>
    <string name="salir">Salir</string>
    <string name="conf_cerrar_sesion">¿Seguro que quiere cerrar sesión?</string>
    <string name="yes">Si</string>
    <string name="No">No</string>
    <string name="firma_ok">Ficha firmada correctamente</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="modificar_ficha">MODIFICAR FICHA</string>
    <string name="password_actual">Password actual</string>
    <string name="nuevo_password">Nuevo password</string>
    <string name="repita_nuevo_password">Repita nuevo password</string>
    <string name="cambiar">Cambiar</string>
    <string name="versi_n_app_1">Versión app: 1</string>
    <string name="juan_m_rquez_serrano">Juan Márquez Serrano</string>
    <string name="desarrollador">Desarrollador:</string>
    <string name="contacto">CONTACTO</string>
    <string name="aenur32_gmail_com">Aenur32@gmail.com</string>
    <string name="portfolio">Portfolio:</string>
    <string name="www_portfolio_com">www.portfolio.com</string>
    <string name="descripci_n_de_la_app">Descripción de la app</string>
    <string name="descripcionApp">Aplicación para la creación, edición y almacenamiento de las fichas diarias a realizar durante la FCT.<br />Las fichas son almacenadas en una base de datos remota gestionada por una API Rest.<br />Las fichas son creadas y editadas por los alumnos y firmadas por los profesores.</string>
    <string name="ErrorUnknowServer">Error desconocido del servidor.</string>
    <string name="UnknowError">Ocurrio un error desconocido</string>
    <string name="TutorDesconocido">Tutor desconocido</string>
    <string name="UserNotFound">Usuario no encontrado</string>
    <string name="RequiredField">Campo obligatorio</string>
    <string name="IncorrectPassword">Password incorrecto</string>
    <string name="PasswordNotMatch">Los password no coinciden</string>
    <string name="PasswordChangeOk">Password cambiado correctamente.</string>
    <string name="ConfirmChange">Confirmar modificación</string>
    <string name="ModifiedCorrectly">Modificación correcta</string>
    <string name="FichaNotFound">Ficha no encontrada.</string>
    <string name="FichaExist">Ya hay una ficha con esa fecha.</string>
    <string name="FichaChecked">La ficha ya esta firmada</string>
    <string name="EnabledUser">Usuario dado de baja.</string>
    <string name="IncorrectEmail">Email incorrecto</string>
    <string name="ErrorSaveFicha">Error al guardar la ficha</string>
    <string name="SaveFichaOk">Ficha guardada correctamente</string>
    <string name="user_without_authorization">Usuario sin autorización</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>