<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity"
    android:background="@drawable/degradado_registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_usuario"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/md_indigo_900"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/md_grey_400"
            android:elevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:startIconDrawable="@drawable/ic_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textWebEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:startIconDrawable="@drawable/ic_lock_24"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textWebPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/degradado_button_login"
                    android:text="@string/login" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</ScrollView>